# AAA

./: .gitignore  .gitmodules  README.md  execute.js
abis/: AccessControlsAbi.json  AccountsAbi.json  AgentsAbi.json  CollectionManagerAbi.json  DevTreasuryAbi.json  GMAbi.json  MarketAbi.json  NFTAbi.json
agent_server/: .env.example  .gitignore  Cargo.toml
agent_server/abis/: AccessControls.json  Agents.json  LensGlobalFeed.json
agent_server/src/: main.rs
agent_server/src/classes/: agent_manager.rs
agent_server/src/utils/: constants.rs  contracts.rs  ipfs.rs  lens.rs  llama.rs  mod.rs  open_ai.rs  types.rs
app/: .eslintrc.json  .gitignore  README.md  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
app/abis/: CollectionManagerAbi.json  MarketAbi.json
contracts/: agents.js  collections.js  execute.js  foundry.toml
contracts/src/: AAAAccessControls.sol  AAAAgents.sol  AAACollectionManager.sol  AAADevTreasury.sol  AAAErrors.sol  AAALibrary.sol  AAANFT.sol  (+2 more)
src/: AAAAccessControls.flattened.sol  AAAAccessControls.sol  AAAAgents.flattened.sol  AAAAgents.sol  AAACollectionManager.sol  AAADevTreasury.sol  AAAErrors.sol  AAALibrary.sol  AAAMarket.sol  AAANFT.sol
storage/: contracts.json
test/: AAAAccessControls.t.sol  AAAAgents.t.sol  AAACollectionManager.t.sol  AAAMarket.t.sol
triplea/: networks.json  schema.graphql  subgraph.yaml
triplea_app/: .env.example  .gitignore  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
triplea_subgraph/: networks.json  package.json  schema.graphql  subgraph.yaml
(+262 files in other folders)
