[package]
name = "agent_server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.26.1"
rand = "0.8.5"
tungstenite = "0.26.1"
chrono = "0.4.39"
reqwest = {version = "0.12.4",features = ["json", "multipart", "blocking", "native-tls", "rustls-tls"] }
hyper = { version = "1.3.1", features = ["full"] }
once_cell = "1.17.1"
ethers = { version = "2.0.14", features = ["rustls"] }
base64 = "0.22.1"
uuid = { version = "1.8.0", features = ["v4"] }
aes-gcm = "0.10.3"
